--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ env:
   GO111MODULE: "on"
   GOLANG_VERSION: ~1.23
   GOLANGCI_LINT_VERSION: v1.63.4
-  
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -19,12 +19,16 @@ jobs:
         run: echo "BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
           go-version: ${{ env.GOLANG_VERSION }}
 
       - name: Check out code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Download dependencies
+        run: go mod download
+        working-directory: ${{ env.BRANCH }}
 
       - name: Linters
         uses: golangci/golangci-lint-action@v3
@@ -40,12 +44,16 @@ jobs:
         run: echo "BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
           go-version: ${{ env.GOLANG_VERSION }}
 
       - name: Check out code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Download dependencies
+        run: go mod download
+        working-directory: ${{ env.BRANCH }}
 
       - name: Unit tests
         run: go test -v -count=1 -race -timeout=1m ./...
@@ -67,12 +75,12 @@ jobs:
     if: contains(github.ref, 'calendar')
     steps:
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
           go-version: ${{ env.GOLANG_VERSION }}
 
       - name: Check out code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: make lint
         run: make lint
