--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,87 +1,87 @@
-version: "2"
+name: Otus homework tests
 
-run:
-  tests: true
-  build-tags:
-    - bench
-    - !bench
+on:
+  push:
+    branches:
+      - hw*
 
-linters-settings:
-  funlen:
-    lines: 150
-    statements: 80
-  depguard:
-    rules:
-      Main:
-        files:
-         - $all
-         - "!$test"
-        allow:
-          - $gostd
-          - "golang.org/x/example/hello/reverse"
-          - "golang.org/x/example/*"
-          - "golang.org/x/example/hello/reverse"
-          - "golang.org/x/example/..."
-      Test:
-        files:
-          - $test
-        allow:
-          - $gostd
-          - github.com/stretchr/testify
-          - pkg: "golang.org/x/example/hello/reverse"
-issues:
-  exclude-rules:
-    - path: _test\.go
-      linters:
-        - errcheck
-        - dupl
-        - gocyclo
-        - gosec
+env:
+  GO111MODULE: "on"
+  GOLANG_VERSION: ~1.23
+  GOLANGCI_LINT_VERSION: v1.63.4
+  
+jobs:
+  lint:
+    runs-on: ubuntu-latest
+    if: ${{ !contains(github.ref, 'calendar') }}
+    steps:
+      - name: Extract branch name
+        run: echo "BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 
-linters:
-  disable-all: true
-  enable:
-    - asciicheck
-    - depguard
-    - dogsled
-    - dupl
-    - bodyclose
-    - durationcheck
-    - errorlint
-    - exhaustive
-    - copyloopvar
-    - funlen
-    - gocognit
-    - goconst
-    - gocritic
-    - gocyclo
-    - godot
-    - goheader
-    - goprintffuncname
-    - gosec
-    - govet
-    - importas
-    - ineffassign
-    - lll
-    - makezero
-    - misspell
-    - nestif
-    - nilerr
-    - noctx
-    - nolintlint
-    - prealloc
-    - predeclared
-    - revive
-    - staticcheck
-    - tagliatelle
-    - thelper
-    #typecheck
-    - unconvert
-    - unparam
-    - unused
-    - whitespace
-formatters:
-  enable:
-    - gci
-    - gofmt
-    - gofumpt
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: ${{ env.GOLANG_VERSION }}
+
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: Linters
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: ${{ env.GOLANGCI_LINT_VERSION }}
+          working-directory: ${{ env.BRANCH }}
+
+  tests:
+    runs-on: ubuntu-latest
+    if: ${{ !contains(github.ref, 'calendar') }}
+    steps:
+      - name: Extract branch name
+        run: echo "BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: ${{ env.GOLANG_VERSION }}
+
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: Unit tests
+        run: go test -v -count=1 -race -timeout=1m ./...
+        working-directory: ${{ env.BRANCH }}
+
+      - name: Optimization tests
+        run: go test -v -count=1 -timeout=1m -tags bench ./...
+        if: env.BRANCH == 'hw10_program_optimization'
+        working-directory: ${{ env.BRANCH }}
+
+      - name: Bash tests
+        shell: bash
+        run: ./test.sh
+        if: contains('hw01_hello_otus hw07_file_copying hw08_envdir_tool hw11_telnet_client', env.BRANCH)
+        working-directory: ${{ env.BRANCH }}
+
+  tests_by_makefile:
+    runs-on: ubuntu-latest
+    if: contains(github.ref, 'calendar')
+    steps:
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: ${{ env.GOLANG_VERSION }}
+
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: make lint
+        run: make lint
+        working-directory: hw12_13_14_15_16_calendar
+
+      - name: make build
+        run: make build
+        working-directory: hw12_13_14_15_16_calendar
+
+      - name: make test
+        run: make test
+        working-directory: hw12_13_14_15_16_calendar
